<resources>
    <string name="app_name">Sundy</string>


    <string name="end_call">结束</string>
    <string name="close">关闭</string>
    <string name="video_call">视频通话</string>
    <string name="pause_call">暂停通话</string>
    <string name="im">消息</string>

    <string name="theme">主题表情</string>
    <string name="file_transfer">文件传输</string>
    <string name="content_introduce">内容介绍</string>

</resources>
